--- a/src/main/resources/assets/mod/lang/en_us.json
+++ b/src/main/resources/assets/mod/lang/en_us.json
@@ -1,1 +1,10 @@
-{}
+{
+  "block.mod.koronbeki_ore": "Koronbeki Ore",
+  "item.mod.koronbeki_pickaxe": "Koronbeki Pickaxe",
+  "item.mod.koronbeki_ingot": "Koronbeki",
+  "item.mod.koronbeki_axe": "Koronbeki Axe",
+  "item.mod.koronbeki_hoe": "Koronbeki Hoe",
+  "item.mod.koronbeki_shovel": "Koronbeki Shovel",
+  "item.mod.koronbeki_sword": "Koronbeki Sword",
+  "block.mod.koronbeki_block": "Block of Koronbeki"
+}
