--- a/src/main/resources/assets/mod/lang/en_us.json
+++ b/src/main/resources/assets/mod/lang/en_us.json
@@ -1,10 +1,14 @@
 {
+  "item.mod.maconha_armor_leggings": "Maconha Armor Leggings",
+  "item.mod.maconha_armor_chestplate": "Maconha Armor Body",
+  "item.mod.koronbeki_axe": "Koronbeki Axe",
+  "item.mod.koronbeki_sword": "Koronbeki Sword",
+  "item.mod.maconha_armor_boots": "Maconha Armor Boots",
+  "block.mod.koronbeki_block": "Block of Koronbeki",
   "block.mod.koronbeki_ore": "Koronbeki Ore",
+  "item.mod.maconha_armor_helmet": "Maconha Armor Helmet",
   "item.mod.koronbeki_pickaxe": "Koronbeki Pickaxe",
   "item.mod.koronbeki_ingot": "Koronbeki",
-  "item.mod.koronbeki_axe": "Koronbeki Axe",
   "item.mod.koronbeki_hoe": "Koronbeki Hoe",
-  "item.mod.koronbeki_shovel": "Koronbeki Shovel",
-  "item.mod.koronbeki_sword": "Koronbeki Sword",
-  "block.mod.koronbeki_block": "Block of Koronbeki"
+  "item.mod.koronbeki_shovel": "Koronbeki Shovel"
 }
