--- a/src/main/resources/assets/mod/lang/en_us.json
+++ b/src/main/resources/assets/mod/lang/en_us.json
@@ -7,7 +7,7 @@
   "block.mod.koronbeki_block": "Block of Koronbeki",
   "block.mod.koronbeki_ore": "Koronbeki Ore",
   "item.mod.maconha_armor_helmet": "Maconha Armor Helmet",
-  "item.mod.koronbeki_pickaxe": "Koronbeki Pickaxe",
+  "item.mod.koronbeki_pickaxe": "Marreta Do Zoio",
   "item.mod.koronbeki_ingot": "Koronbeki",
   "item.mod.koronbeki_hoe": "Koronbeki Hoe",
   "item.mod.koronbeki_shovel": "Koronbeki Shovel"
